syntax = "proto3";

option java_package = "com.github.burkov.dimonserver.protobuf";

message HelloRequest {
    string name = 1;
}
message HelloResponse {
    string message = 1;
}

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloResponse) {}
}
